--- a/force-catalog/main/default/lwc/lmsSubscibe/lmsSubscribe.css
+++ b/force-catalog/main/default/lwc/lmsSubscibe/lmsSubscribe.css
@@ -10,9 +10,11 @@
 .content {
     display: flex;
     flex-wrap: wrap;
+  
 }
 
 c-product-tile {
-    min-width: 200px;
-    flex: 1;
+    width: 200px;
+  
+
 }
